                       User-Visible remctl Changes

remctl 3.15 (unreleased)

    Validate command argument count, the length of command arguments, and
    the length of blocks of output from the server fit into the data type
    used in the wire protocol.

    Check the port argument to remctl and remctld to ensure that it is a
    valid port number.

    Update to rra-c-util 7.1:

    * Avoid spurious test failures from the network library.
    * Fix configure output when a Kerberos install prefix was provided.
    * Fix new warnings in GCC 7 and add new warning flags.
    * Fix all warnings from the Clang static analyzer.
    * Fix warnings under Clang with most warnings enabled.

    Update to C TAP Harness 4.3:

    * On test failures, report left/right instead of wanted/expected.
    * Fix string comparisons involving NULL pointers.

remctl 3.14 (2018-03-31)

    SECURITY: Fix use-after-free and double-free when handling the sudo
    option in the remctld and remctl-shell server.  For remctl-shell, this
    will occasionally produce a spurious non-zero exit status for a
    command that succeeded.  For remctld, the normal consequence is a
    server process crash after running a command with the sudo option, but
    it may be possible (albeit difficult) for a streaming client to abuse
    this bug to execute an arbitrary command on the server or corrupt
    server memory.  Thanks, Santosh Ananthakrishnan.  (CVE-2018-0493)

remctl 3.13 (2016-10-10)

    remctl-shell now also supports being run as a forced command from
    authorized_keys (or other methods).  This may be preferrable to using
    it as a shell since it doesn't require setting non-standard sshd
    options.

    The summary configuration option is now allowed for commands with
    subcommands other than ALL.  When generating a help summary (done in
    response to the command "help" with no arguments), command lines with
    a subcommand and a summary option will be run with two arguments: the