@@ -612,6 +612,12 @@ check-local: $(check_PROGRAMS)
 		$(REMCTL_RUBY) -I. test_remctl.rb ;	\
 	fi
 
+# Used by maintainers to check the source code with cppcheck.
+check-cppcheck:
+	cd $(abs_top_srcdir) && cppcheck -q --error-exitcode=2	\
+	    --suppressions-list=tests/data/cppcheck.supp	\
+	    --enable=warning,performance,portability,style .
+
 # Used by maintainers to run the main test suite under valgrind.  Suppress
 # the xmalloc and pod-spelling tests because the former won't work properly
 # under valgrind (due to increased memory usage) and the latter is pointless
