@@ -2,7 +2,8 @@
  * Test suite for continued commands.
  *
  * Written by Russ Allbery <eagle@eyrie.org>
- * Copyright 2006, 2009, 2010, 2012, 2013
+ * Copyright 2018 Russ Allbery <eagle@eyrie.org>
+ * Copyright 2006, 2009-2010, 2012-2013
  *     The Board of Trustees of the Leland Stanford Junior University
  *
  * See LICENSE for licensing terms.
@@ -57,27 +58,30 @@ main(void)
     ok(remctl_open(r, "localhost", 14373, config->principal), "remctl_open");
 
     /* Send the command broken in the middle of protocol elements. */
-    token.value = buffer;
     memcpy(buffer, prefix_first, sizeof(prefix_first));
     memcpy(buffer + sizeof(prefix_first), data, 2);
+    token.value = buffer;
     token.length = sizeof(prefix_first) + 2;
     status = token_send_priv(r->fd, r->context, TOKEN_DATA | TOKEN_PROTOCOL,
                              &token, 0, &major, &minor);
     is_int(TOKEN_OK, status, "first token sent okay");
     memcpy(buffer, prefix_next, sizeof(prefix_next));
     memcpy(buffer + sizeof(prefix_next), data + 2, 4);
+    token.value = buffer;
     token.length = sizeof(prefix_next) + 4;
     status = token_send_priv(r->fd, r->context, TOKEN_DATA | TOKEN_PROTOCOL,
                              &token, 0, &major, &minor);
     is_int(TOKEN_OK, status, "second token sent okay");
     memcpy(buffer, prefix_next, sizeof(prefix_next));
     memcpy(buffer + sizeof(prefix_next), data + 6, 13);
+    token.value = buffer;
     token.length = sizeof(prefix_next) + 13;
     status = token_send_priv(r->fd, r->context, TOKEN_DATA | TOKEN_PROTOCOL,
                              &token, 0, &major, &minor);
     is_int(TOKEN_OK, status, "third token sent okay");
     memcpy(buffer, prefix_last, sizeof(prefix_last));
     memcpy(buffer + sizeof(prefix_last), data + 19, sizeof(data) - 19);
+    token.value = buffer;
     token.length = sizeof(prefix_next) + sizeof(data) - 19;
     status = token_send_priv(r->fd, r->context, TOKEN_DATA | TOKEN_PROTOCOL,
                              &token, 0, &major, &minor);
